Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34596

QtQuick applications fail to load on Android KitKat 4.4

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.2.0 RC1
    • 5.2.0 Beta1
    • QPA
    • None
    • Android
    • c95e1567e9f42239bb83a64c4e5f18c48f3ee022

      Qt apps fail to run on Android 4.4 KitKat as a result of a use of reflections to access a private member variable which was renamed.

      Specifically, in Qt's androidjnimain.cpp, the hardcode usage of a private member variable name (through reflections) of Android/View/Surface on the following line: GET_AND_CHECK_FIELD(m_surfaceFieldID, clazz, "mNativeSurface", "I");
      fails since this member variable no longer exists in Android 4.4 KitKat and appears (by performing a code search) to have been renamed to "mNativeSurfaceTexture".

      Deploying a QtQuick application from QtCreator to an Android device running KitKat, the application fails at runtime with a FieldNotFound exception and subsequent stack trace.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            brichter Bryan Richter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes