Fixing Android KitKat failure

There was some modifications on the way OpenGL is handles on Android
4.4. This problem was fixed on Qt 5.2, and we just backported this fix,
according bug report #34596 [1]

[1] https://bugreports.qt-project.org/browse/QTBUG-34596

Signed-off-by: Rodrigo Goncalves de Oliveira <rodrigo.goncalves@openbossa.org>